2007-01-30  Akim Demaille  <demaille@gostai.com>

	libport/unistd.h
	* unistd.h: New.
	* libport.mk: Adjust.

2007-01-28  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix setsockopt portability for Windows.
	* network.h: Cast the 4th argument to const char* instead of
	  const void* because the implicit conversion from const void* to
	  const char* does not work in C++.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	assert.hh & pabort
	* compiler.hh: Extract assert stuff to...
	* assert.hh: this new file.
	(pabort): New.
	(passert): Simplify by concatenating the location string before
	using it.
	* libport.mk: Adjust.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	* compiler.hh (passert, ECHO, PING): New.

2007-01-24  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	setsockopt on Windows.
	* network.h: Cast the fourth argument to const void*.

2007-01-24  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Handle shutdown(2) macros for Windows.
	* network.h (SHUT_RD, SHUT_WR, SHUT_RDWR): Define for Windows.

2007-01-23  Akim Demaille  <akim@lrde.epita.fr>

	Comments removal
	* network.h: Remove obsolete comments.

2007-01-23  Akim Demaille  <akim@lrde.epita.fr>

	LIBPORT_FD_SET
	* libport/network.h: Define it here.

2007-01-21  Akim Demaille  <akim@lrde.epita.fr>

	Windows portability
	* tests/Makefile.am (TESTS): $(EXEEXT) can be appended to
	check_PROGRAMS.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Bad typo
	* libport/tests/Makefile.am: Add missing rparen.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Use init.mk
	* libport/tests/Makefile.am: here.
	Adjust.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	conversion from ufloats to long long
	* ufloat.hh: here.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	urbi -> libport
	* README, utime.hh: here.

2007-01-17  Akim Demaille  <akim.demaille@free.fr>

	compiler.hh
	* compiler.hh: New.
	* libport.mk: Ship it.

2007-01-12  Akim Demaille  <demaille@gostai.com>

	Fix